Resolved two line navbar on mobile devices. Added hidden-little-phone class to css <390px

--- a/src/app/assets/stylesheets/application.css.less
+++ b/src/app/assets/stylesheets/application.css.less
@@ -91,6 +91,12 @@ h5, h6
   }
 }
 
+@media (max-width: 390px) {
+  .hidden-little-phone {
+    display:none;
+  }
+}
+
 @media (max-width: 1199px) {
 
   header {
